--- a/app.css
+++ b/app.css
@@ -3,10 +3,35 @@
 } */
 
 body {
-  background: linear-gradient(to bottom, #ad66d5, #ffffff);
+  background: linear-gradient(135deg, #000000, #6a0dad);
+  background-size: 300% 300%;
+  animation: gradientAnimation 8s cubic-bezier(0.42, 0, 0.58, 1) infinite;
   background-repeat: no-repeat;
   height: 100vh;
   font-size: 50px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 50% 50%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  75% {
+    background-position: 50% 50%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 
 .container {
@@ -32,18 +57,18 @@ body {
 .menu ul li a {
   text-decoration: none;
   display: block;
-  background-color: #8217ce;
+  background-color: #7d00d6;
   color: white;
   border-radius: 46px;
   padding: 5px 50px;
-  border: 1px solid black;
+  border: 2px solid black;
 }
 
 .contentModal,
 .contentModalAbout,
 .contentModalContakt {
   display: none;
-  background-color: #d6b5e9;
+  background-color: #8b00db;
   padding: 20px;
   text-align: center;
   width: 1400px;
