--- a/app.css
+++ b/app.css
@@ -58,6 +58,11 @@ body {
   border-radius: 46px;
   padding: 5px 50px;
   border: 2px solid black;
+  transition: transform 0.3s ease;
+}
+
+.menu ul li a:hover {
+  transform: scale(1.2);
 }
 
 .contentModal,
