--- a/app.css
+++ b/app.css
@@ -158,3 +158,4 @@ body {
 a {
   color: rgb(156, 0, 0); /* Измените цвет на желаемый */
 }
+/* _________________________________________________________________ */
