--- a/my project/practik_js/take exsample/style.css
+++ b/my project/practik_js/take exsample/style.css
@@ -1,3 +1,170 @@
 .green {
   background-color: green;
 }
+
+.pageStart {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.starPlay {
+  text-align: center;
+}
+
+.starPlay h2 {
+  font-size: 40px;
+}
+
+.play {
+  width: 500px;
+  height: 500px;
+  background-image: url(img/Play.png);
+  background-size: 100% 100%;
+  cursor: pointer;
+  transition: box-shadow 0.7s ease, border-radius 0.5s ease-in-out;
+  box-shadow: 0px 0px 80px black;
+}
+.play:active {
+  box-shadow: 0px 0px 70px black;
+}
+.play:hover {
+  border-radius: 50px;
+}
+
+.menu {
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+.menuList {
+  width: 400px;
+  height: 300px;
+}
+
+.level {
+  margin: 10px;
+  background-color: rgb(247, 0, 0);
+  padding: 20px;
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  border-radius: 40px;
+  cursor: pointer;
+}
+/* _______________________________________________________________
+*/
+
+.rov1 {
+  display: flex;
+}
+
+.col1 {
+  display: flex;
+  width: 33%;
+}
+.col2_1 {
+  width: 33%;
+  padding-top: 350px;
+}
+.col2_2 {
+  width: 33%;
+  padding-top: 100px;
+}
+.col2_3 {
+  width: 33%;
+}
+.col2 {
+  width: 46%;
+}
+.col3 {
+  width: 20%;
+  font-size: 20px;
+  text-align: right;
+}
+.lavel1 {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border-radius: 20px;
+  height: 20px;
+}
+
+.timer1 {
+  padding: 10px;
+  background-color: blue;
+  color: white;
+  margin-left: 20px;
+  height: 20px;
+  border-radius: 20px;
+}
+/* ___________________________ */
+
+.form {
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+form label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+form input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+form button:hover {
+  background-color: #0056b3;
+}
+.rov2 {
+  display: flex;
+}
+/* ______________________________________ */
+.container2 {
+  height: 95vh;
+  position: relative;
+}
+
+.rov3 {
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  width: 100%;
+}
+.rov3 div {
+  width: 50%;
+}
+.agen {
+  text-align: right;
+}
+
+.rov0 {
+  text-align: center;
+  font-size: 30px;
+}
