--- a/my project/practik_js/game10/style.css
+++ b/my project/practik_js/game10/style.css
@@ -168,3 +168,15 @@
   text-align: center;
   font-size: 30px;
 }
+/* ___________________________________________________________________ */
+
+.WinInfo {
+  display: none;
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
